# Project23New

./: .gitignore  README.md  baseline_multi_turn_outputs.jsonl  baseline_single_turn_outputs.jsonl  combined_finetuned_multi_turn_outputs.jsonl  combined_finetuned_single_turn_outputs.jsonl  fine_tuning.ipynb  guardrailed_finetuned_multi_turn_outputs.jsonl  guardrailed_finetuned_single_turn_outputs.jsonl  main.ipynb  multi_turn_test.jsonl  multi_turn_train.jsonl  multi_turn_val.jsonl  pyproject.toml  rag_multi_turn_outputs.jsonl  rag_single_turn_outputs.jsonl  single_turn_test.jsonl  single_turn_train.jsonl  single_turn_val.jsonl
data_generator/: data_generator.py
parser/: parser_testing.ipynb  recipe_parser.py  test_recipe_parser.py
