[project]
name = "project23new"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "pandas>=2.3.3,<3.0.0",
    "nltk>=3.9.2,<4.0.0",
    "numpy>=2.3.4,<3.0.0",
    "transformers>=4.57.1,<5.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "ipykernel (>=7.1.0,<8.0.0)",
]

[project.optional-dependencies]
cuda = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

cpu = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

rocm = [
#,https://rocm.nightlies.amd.com
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"